--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,7 +23,7 @@ html, body {
     height: 100vh;
     padding: 0;
     margin: 0;
-    font-family: $font-family;
+    font-family: $font-family-sans-serif;
     font-weight: $font-weight;
     font-size: $font-size-base;
     line-height: $line-height-base;
