--- a/resources/sass/app-admin.scss
+++ b/resources/sass/app-admin.scss
@@ -1,4 +1,5 @@
-@import 'bootstrap';
+//@import 'bootstrap';
+@import "bootstrap/scss/bootstrap";
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
