bugfix price calculation, check fpr model instance

--- a/resources/sass/admin/_calendar.scss
+++ b/resources/sass/admin/_calendar.scss
@@ -27,6 +27,12 @@
 			}
 		}
 	}
+	@include media('<tablet') {
+		.fc-header-left, fc-header-center, fc-header-right {
+			width: 100%;
+			display: block;
+		}
+	}
 }
 .fc {
 	.fc-daygrid-day-top {
