--- a/resources/sass/global/_header.scss
+++ b/resources/sass/global/_header.scss
@@ -19,6 +19,7 @@ header {
 		padding-left: 50px;
 	}
 }
+/*
 .top-menu {
 	margin-left: -2.8rem;
 	display: flex;
@@ -62,3 +63,4 @@ header {
 		}
 	}
 }
+*/
