--- a/resources/sass/global/_footer.scss
+++ b/resources/sass/global/_footer.scss
@@ -2,6 +2,19 @@ footer {
 	grid-area: footer;
 	background-color: $bgFooter;
 	box-shadow: 10px 5px 0 0 rgba(0, 0, 0, 0.75);
+	.public {
+		&.navbar {
+			.navbar-nav {
+				.nav-item {
+					color: #fff;
+					line-height: 25px;
+					a {
+						color: #fff;
+					}
+				}
+			}
+		}
+	}
 }
 
 header, footer {
