--- a/resources/sass/public/_calendar.scss
+++ b/resources/sass/public/_calendar.scss
@@ -1,11 +1,12 @@
 .calendar {
 	width: 50%;
 	height: auto;
-	min-height: 400px;
+	min-height: 500px;
 	max-height: 100%;
 
 	@include media('<tablet') {
 		width: 100%;
+		height: 100vh;
 	}
 
 	.fc-toolbar-title {
